[package]
name = "passwd"
version = "0.1.0"
authors = ["jimizai <359743984@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "passwd"
path = "src/lib.rs"

[dependencies]
chrono = "0.4"
diesel = {version = "1.4.4", features = ["mysql"]}
dotenv = "0.15.0"
rocket = "0.4.6"
rocket_contrib = {version = "0.4.6", features = ["json", "diesel_mysql_pool"]}
jsonwebtoken = "6.0.1"
redis="0.18.0"
r2d2 = "0.8.9"
r2d2_redis = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1"
serde_json = "1"