[package]
authors = ["jimizai <359743984@qq.com>"]
edition = "2018"
name = "passwd"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
mysql = ["diesel/mysql", "diesel_migrations/mysql"]

[lib]
name = "passwd"
path = "src/lib.rs"

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
diesel = {version = "1.4.4", features = ["chrono", "serde_json"]}
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
jsonwebtoken = "6.0.1"
r2d2 = "0.8.9"
r2d2_redis = "0.13.0"
redis = "0.18.0"
rocket = "0.4.6"
rocket_contrib = {version = "0.4.6", features = ["json", "diesel_mysql_pool"]}
serde = {version = "1.0", features = ["derive"]}
serde_derive = "1"
serde_json = "1"
validator = "0.12"
validator_derive = "0.12"
